--- a/admin/homeAdmin.html
+++ b/admin/homeAdmin.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="container-fluid" ng-app="adminApp">
-    <div class="row">
+    <div class="row" ng-controller="managerUser">
       <div class="col-4 col-md-3 col-lg-3 col-xl-2 menu-left float-left p-0" id="hiddenMenus">
         <div class="card">
           <button onclick="show_hidden()" class="float-right">x</button>
@@ -27,7 +27,7 @@
           <div class="card-footer">
             <ul>
               <li data-toggle="collapse" data-target="#Profile-user">
-                Bùi Minh Tiến <i class="fas fa-angle-down"></i>
+                {{loginUser.name}} <i class="fas fa-angle-down"></i>
                 <ul class="collapse" id="Profile-user">
                   <li class="nav-link"><a href="#!updateAccount">Cài Đặt</a></li>
                   <li class="nav-link"><a href="#">Đăng Xuất</a></li>
@@ -72,10 +72,10 @@
             <a class="nav-link" href="#"><img src="../update/user.png"></a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#">Bùi Minh Tiến</a>
+            <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#">{{loginUser.name}}</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="!#managerAccount">Cài Đặt</a>
-              <a class="dropdown-item" href="#">Đăng Xuất</a>
+              <a class="dropdown-item" ng-click="logout()">Đăng Xuất</a>
             </div>
           </li>
         </ul>
